--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -26,5 +26,33 @@
     "notify01": "登录成功",
     "notify02": "退出成功",
     "notify03": "您已经登录"
+  },
+  "dashboards": {
+    "title01": "基础",
+    "title02": "仪表板",
+    "title03": "用户",
+    "title04": "产品",
+    "desc01": "欢迎回来！",
+    "desc02": "每周销售",
+    "desc03": "新用户",
+    "desc04": "订单",
+    "desc05": "消息",
+    "desc06": "访问量",
+    "desc07": "当前访问量",
+    "lb01": "年前"
+  },
+  "account": {
+    "title01": "个人资料图片",
+    "title02": "账户详情",
+    "desc01": "JPG 或 PNG 不大于 5 MB",
+    "btn01": "上传新图片",
+    "btn02": "保存更改",
+    "lb01": "用户名",
+    "lb02": "名字",
+    "lb03": "姓氏",
+    "lb04": "地址",
+    "lb05": "电子邮件地址",
+    "lb06": "电话号码",
+    "lb07": "生日"
   }
 }
