--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -5,8 +5,9 @@
     "na02": "登录/注册"
   },
   "button": {
-    "btn01": "登录",
-    "btn02": "返回首页"
+    "btnLogin": "登录",
+    "btn02": "返回首页",
+    "btnLoginLoading": "...登录中"
   },
   "form": {
     "tp01": "电子邮件",
@@ -54,5 +55,8 @@
     "lb05": "电子邮件地址",
     "lb06": "电话号码",
     "lb07": "生日"
+  },
+  "toast": {
+    "Unauthorized": "您无权访问。"
   }
 }
