--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -43,18 +43,19 @@
     "lb01": "年前"
   },
   "account": {
-    "title01": "个人资料图片",
+    "title01": "头像",
     "title02": "账户详情",
-    "desc01": "JPG 或 PNG 不大于 5 MB",
-    "btn01": "上传新图片",
+    "desc01": "JPG 或 PNG 文件大小不得超过 5 MB",
+    "btn01": "上传",
     "btn02": "保存更改",
     "lb01": "用户名",
-    "lb02": "名字",
-    "lb03": "姓氏",
-    "lb04": "地址",
-    "lb05": "电子邮件地址",
-    "lb06": "电话号码",
-    "lb07": "生日"
+    "lb02": "性别",
+    "lb03": "男",
+    "lb04": "女",
+    "lb05": "地址",
+    "lb06": "邮箱地址",
+    "lb07": "电话号码",
+    "lb08": "出生日期"
   },
   "toast": {
     "Unauthorized": "您无权访问。"
