feat: delete user

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -51,7 +51,7 @@
     "lb01": "Username",
     "lb02": "Gender",
     "lb03": "Male",
-    "bl04": "Female",
+    "lb04": "Female",
     "lb05": "Address",
     "lb06": "Email address",
     "lb07": "Phone number",
