--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -57,6 +57,25 @@
     "lb07": "电话号码",
     "lb08": "出生日期"
   },
+  "users": {
+    "title01": "用户列表",
+    "title02": "用户",
+    "title03": "头像",
+    "title04": "全名",
+    "title05": "电子邮件",
+    "title06": "电话",
+    "title07": "出生日期",
+    "title08": "性别",
+    "title09": "验证",
+    "title10": "锁定",
+    "title11": "最后活动时间",
+    "title12": "角色",
+    "inp01": "搜索",
+    "inp02": "输入文本",
+    "btn01": "添加新用户",
+    "desc01": "每页行数",
+    "desc02": "密集挂起"
+  },
   "toast": {
     "Unauthorized": "您无权访问。"
   }
