fix: multi langue from combo box of Users page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -40,7 +40,11 @@
     "desc05": "Messages",
     "desc06": "Website visits",
     "desc07": "Current Visits",
-    "lb01": "than last year"
+    "lb01": "than last year",
+    "cb01": "Week",
+    "cb02": "Month",
+    "cb03": "Quarter",
+    "cb04": "Year"
   },
   "account": {
     "title01": "Profile picture",
