--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -74,11 +74,19 @@
     "title10": "锁定",
     "title11": "最后活动时间",
     "title12": "角色",
+    "title13": "最近订单",
+    "title14": "活跃用户",
+    "title15": "评级比率",
+    "title16": "营业额",
     "inp01": "搜索",
-    "inp02": "输入文本",
-    "btn01": "添加新用户",
+    "inp02": "输入文字",
+    "btn01": "新增用户",
     "desc01": "每页行数",
-    "desc02": "密集挂起"
+    "desc02": "待处理",
+    "desc03": "网站绩效概览",
+    "desc04": "访客",
+    "desc05": "订单",
+    "desc06": "购买率"
   },
   "toast": {
     "Unauthorized": "您无权访问。"
