--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -74,11 +74,19 @@
     "title10": "Lock",
     "title11": "Last Active",
     "title12": "Role",
+    "title13": "Recent Order",
+    "title14": "Active User",
+    "title15": "Rating rate",
+    "title16": "Revenue",
     "inp01": "Search",
     "inp02": "Enter text",
     "btn01": "Add new user",
     "desc01": "Rows per page",
-    "desc02": "Dense pending"
+    "desc02": "Dense pending",
+    "desc03": "Website Performance Overview",
+    "desc04": "Visitors",
+    "desc05": "Orders",
+    "desc06": "Purchase Rate"
   },
 
   "toast": {
