--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -81,7 +81,7 @@
 
     "inp01": "Tìm kiếm",
     "inp02": "Nhập văn bản",
-    "btn01": "Thêm người dùng mới",
+    "btn01": "Thêm người dùng ",
     "desc01": "Hàng mỗi trang",
     "desc02": "Dữ liệu chờ xử lý",
     "desc03": "Tổng quan hiệu suất",
