Add contact management

--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -5,14 +5,21 @@
     "na02": "登录/注册"
   },
   "button": {
+    "btn01": "擦除",
+    "btn02": "创建",
+    "btn03": "编辑",
+    "btn04": "取消",
+    "btn05": "返回首页",
+    "btn06": "添加类别",
     "btnLogin": "登录",
-    "btn02": "返回首页",
     "btnLoginLoading": "...登录中"
   },
   "form": {
     "tp01": "电子邮件",
     "tp02": "密码",
-    "lb01": "显示密码"
+    "lb01": "显示密码",
+    "lb02": "已选择",
+    "lb03": "每页行数"
   },
   "errors": {
     "err01": "请输入电子邮件。",
@@ -87,6 +94,28 @@
     "desc04": "访客",
     "desc05": "订单",
     "desc06": "购买率"
+  },
+  "category": {
+    "heading01": "流派列表",
+    "heading02": "类型",
+    "title01": "图片",
+    "title02": "类型名称",
+    "title03": "确认删除类型",
+    "title04": "编辑类型信息",
+    "title05": "创建新类型",
+    "title06": "类别名称",
+    "title07": "选择图片",
+    "desc01": "您确定要删除所有这些类型吗？",
+    "desc02": "您确定要删除此类型吗？"
+  },
+  "contact": {
+    "heading01": "联系人列表",
+    "heading02": "联系",
+    "title01": "内容",
+    "title02": "确认联系人删除",
+    "title03": "查看联系人信息",
+    "desc01": "您确定要删除所有这些联系人吗？",
+    "desc02": "您确定要删除此联系人吗？"
   },
   "toast": {
     "Unauthorized": "您无权访问。"
