--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -11,6 +11,7 @@
     "btn04": "取消",
     "btn05": "返回首页",
     "btn06": "添加类别",
+    "btn07": "看法",
     "btnLogin": "登录",
     "btnLoginLoading": "...登录中"
   },
@@ -19,7 +20,8 @@
     "tp02": "密码",
     "lb01": "显示密码",
     "lb02": "已选择",
-    "lb03": "每页行数"
+    "lb03": "每页行数",
+    "lb04": "无法使用"
   },
   "errors": {
     "err01": "请输入电子邮件。",
