--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -20,8 +20,7 @@
     "tp02": "密码",
     "lb01": "显示密码",
     "lb02": "已选择",
-    "lb03": "每页行数",
-    "lb04": "无法使用"
+    "lb03": "每页行数"
   },
   "errors": {
     "err01": "请输入电子邮件。",
