--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -20,8 +20,7 @@
     "tp02": "Mật khẩu",
     "lb01": "Hiển thị mật khẩu",
     "lb02": "đã chọn",
-    "lb03": "Số hàng trên mỗi trang",
-    "lb04": "Không có"
+    "lb03": "Số hàng trên mỗi trang"
   },
   "errors": {
     "err01": "Vui lòng nhập email.",
