--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -12,6 +12,7 @@
     "btn05": "Quay lại trang chủ",
     "btn06": "Thêm thể loại",
     "btn07": "Xem",
+    "btn08": "Xuất file Excel",
     "btnLogin": "Đăng nhập",
     "btnLoginLoading": "...Đang đăng nhập"
   },
