Update export file Excel

--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -10,9 +10,9 @@
     "btn03": "Sửa",
     "btn04": "Hủy",
     "btn05": "Quay lại trang chủ",
-    "btn06": "Thêm thể loại",
+    "btn06": "Thêm mới",
     "btn07": "Xem",
-    "btn08": "Xuất file Excel",
+    "btn08": "Xuất Excel",
     "btnLogin": "Đăng nhập",
     "btnLoginLoading": "...Đang đăng nhập"
   },
@@ -89,7 +89,6 @@
     "title16": "Doanh thu",
     "inp01": "Tìm kiếm",
     "inp02": "Nhập văn bản",
-    "btn01": "Thêm người dùng ",
     "desc01": "Hàng mỗi trang",
     "desc02": "Dữ liệu chờ xử lý",
     "desc03": "Tổng quan hiệu suất",
