--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -10,9 +10,9 @@
     "btn03": "编辑",
     "btn04": "取消",
     "btn05": "返回首页",
-    "btn06": "添加类别",
+    "btn06": "添新",
     "btn07": "看法",
-    "btn08": "导出Excel文件",
+    "btn08": "导出Excel",
     "btnLogin": "登录",
     "btnLoginLoading": "...登录中"
   },
@@ -89,7 +89,6 @@
     "title16": "营业额",
     "inp01": "搜索",
     "inp02": "输入文字",
-    "btn01": "新增用户",
     "desc01": "每页行数",
     "desc02": "待处理",
     "desc03": "网站绩效概览",
