Add API for dashboard

--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -48,7 +48,7 @@
     "desc04": "Đơn đặt hàng",
     "desc05": "Tin nhắn",
     "desc06": "Lượt truy cập",
-    "desc07": "Lượt truy cập hiện tại",
+    "desc07": "Trạng thái đơn hàng",
     "lb01": "so với năm trước",
     "cb01": "Tuần",
     "cb02": "Tháng",
