--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -48,7 +48,7 @@
     "desc04": "Item Orders",
     "desc05": "Messages",
     "desc06": "Website visits",
-    "desc07": "Current Visits",
+    "desc07": "Order status",
     "lb01": "than last year",
     "cb01": "Week",
     "cb02": "Month",
