--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -48,7 +48,7 @@
     "desc04": "订单",
     "desc05": "消息",
     "desc06": "访问量",
-    "desc07": "当前访问量",
+    "desc07": "订单状态",
     "lb01": "年前",
     "cb01": "周",
     "cb02": "月",
